NXP-22129: Add trace to debug on CI, monitor gc